# scot_consultoria_scraper

./: Cargo.toml  Dockerfile
src/: main.rs
src/scrapers/: mod.rs  models.rs
